# monitord

./: Cargo.toml  README.md  build.rs  config.toml  justfile
.devcontainer/: devcontainer.json
monitord/: Cargo.toml  README.md  build.rs
monitord-api/: Cargo.toml  README.md
monitord-client/: Cargo.toml  README.md
monitord-client/examples/: basic_client.rs  helpers.rs  simple_monitor.rs  system_dashboard.rs
monitord-client/src/: client.rs  config.rs  error.rs  filter.rs  lib.rs
monitord-client/src/communication/: config.rs  error.rs  manager.rs  mod.rs
monitord-client/src/communication/transport/: grpc.rs  iceoryx.rs  mod.rs
monitord-client/src/connection/: config.rs  mod.rs
monitord-client/src/subscription/: config.rs  mod.rs
monitord-client/src/transport/: config.rs  grpc.rs  iceoryx.rs  mod.rs
monitord-client/src/types/: mod.rs
monitord-collectors/: Cargo.toml  README.md
monitord-collectors/examples/: cpu_collector.rs  full_snapshot.rs  gpu_collector.rs  system_monitor.rs
monitord-collectors/src/: config.rs  cpu.rs  error.rs  gpu.rs  lib.rs  memory.rs  network.rs  process.rs  storage.rs  system.rs  traits.rs
monitord-core/: Cargo.toml
monitord-core/src/: error.rs  lib.rs
monitord-core/src/collectors/: mod.rs
monitord-core/src/models/: cpu.rs  memory.rs  mod.rs  network.rs  process.rs  storage.rs  system.rs
monitord-core/src/models/gpu/: amd.rs  intel.rs  mod.rs  nvidia.rs
monitord-metrics/: Cargo.toml  build.rs
monitord-metrics/src/: cpu.rs  error.rs  gpu.rs  lib.rs  memory.rs
monitord-metrics/src/gpu/: amd.rs  intel.rs  nvidia.rs
monitord-protocols/: Cargo.toml  build.rs
monitord-protocols/protos/: config.proto  monitord.proto  subscription.proto
monitord-protocols/src/: lib.rs
monitord-service/: Cargo.toml  README.md
monitord-service/src/: config.rs  error.rs  main.rs
monitord-service/src/collectors/: config.rs  cpu.rs  error.rs  manager.rs  memory.rs  mod.rs  models.rs
monitord-service/src/collectors/cpu/: config.rs  mod.rs
monitord-service/src/collectors/gpu/: amd.rs  config.rs  fallback.rs  intel.rs  mod.rs  nvidia.rs
monitord-service/src/collectors/memory/: config.rs  mod.rs
monitord-service/src/collectors/network/: config.rs  mod.rs
monitord-service/src/collectors/process/: config.rs  mod.rs
monitord-service/src/collectors/storage/: config.rs  mod.rs
monitord-service/src/collectors/system/: config.rs  mod.rs
monitord-service/src/communication/: config.rs  error.rs  grpc.rs  iceoryx.rs  manager.rs  mod.rs  registry.rs
monitord-service/src/communication/core/: mod.rs  models.rs  traits.rs
monitord-service/src/communication/handlers/: mod.rs  protobuf.rs
monitord-service/src/communication/subscription/: config.rs  error.rs  manager.rs  mod.rs  models.rs
monitord-service/src/communication/tasks/: connection.rs  data.rs  mod.rs
monitord-service/src/communication/transports/: common.rs  grpc.rs  iceoryx.rs  mod.rs
monitord-service/src/platform/: config.rs  error.rs  linux.rs  macos.rs  mod.rs
monitord-service/src/service/: config.rs  error.rs  manager.rs  mod.rs
monitord-transport/: Cargo.toml
monitord-transport/examples/: tokio_local.rs
monitord-transport/src/: config.rs  error.rs  lib.rs
monitord-transport/src/core/: models.rs  traits.rs
monitord-transport/src/transports/: iceoryx.rs  mod.rs  nng.rs
monitord-types/: Cargo.toml  README.md
monitord-types/proto/: service.proto
monitord-types/src/: lib.rs
monitord/src/: config.rs  error.rs  main.rs
monitord/src/metrics/: cpu.rs  disk.rs  gpu.rs  mem.rs  mod.rs  net.rs  proc.rs
monitord/src/metrics/gpu/: amd.rs  intel.rs  nvidia.rs
monitord/src/server/: mod.rs
monitordctl/: Cargo.toml  README.md
monitordctl/src/: main.rs
proto/: buf.yaml  control.proto  metrics.proto  monitord.proto
proto/control/: control.proto
proto/control/v1/: control.proto
proto/metrics/: cpu.proto  gpu.proto  memory.proto  metrics.proto  network.proto  process.proto  storage.proto
proto/metrics/v1/: cpu.proto  gpu.proto  memory.proto  metrics.proto  network.proto  process.proto  storage.proto
proto/service/v1/: service.proto
src/: lib.rs
src/client/: mod.rs
src/collector/: cpu.rs  gpu.rs  memory.rs  mod.rs  staging.rs  store.rs
src/collector/cpu/: mod.rs  sensors.rs  topology.rs  utilization.rs
src/collector/gpu/: amd.rs  amdgpu.rs  api_drivers.rs  i915.rs  intel.rs  mod.rs  nouveau.rs  nvidia.rs  opengl_vulkan.rs  xe.rs
src/collector/gpu/amd/: gpu_metrics.rs  mod.rs
src/collector/gpu/amdgpu/: gpu_metrics.rs
src/collector/gpu/intel/: i915.rs  mod.rs  xe.rs
src/collector/helpers/: cached.rs  discovery.rs  fam.rs  ioctl.rs  mod.rs  pciids.rs  sample.rs  sampler.rs  sysfs.rs
src/collector/mem/: mod.rs
src/collector/memory/: mod.rs
src/collector/net/: mod.rs  wifi.rs
src/collector/network/: mod.rs  wifi.rs
src/collector/process/: mod.rs
src/collector/storage/: mod.rs
src/control/: main.rs
src/daemon/: main.rs
src/daemon/runtime/: mod.rs
src/metrics/: mod.rs
