# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
[package]
name = "monitord"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[[bin]]
name = "monitord"
path = "src/daemon/main.rs"
required-features = ["daemon"]

[[bin]]
name = "monitordctl"
path = "src/control/main.rs"
required-features = ["control"]

[lib]
name = "monitord"
path = "src/lib.rs"

[features]
default = ["client"]
# Whether to include metric definitions
metrics = [
    "prost-types",
    "tonic-prost",
    "tonic-prost-build",
]
# Enabled for collector building
collector = [
    "metrics",
    "wgpu",
    "nvml-wrapper",
    "procfs",
    "pollster",
    "dmidecode",
    "nix",
    "neli",
    "num"
]
# Enabled for client usage
client = ["metrics"]
# Enabled for daemon build
daemon = [
    "collector"
]
# Enabled for control utility build
control = [
    "tonic-prost-build",
]


[dependencies]
anyhow = "1.0"
tracing = "0.1"
tonic = "0.14"
prost = "0.14"

# Metrics dependencies
prost-types = { version = "0.14", optional = true }
tonic-prost = { version = "0.14", optional = true }

# Collector dependencies
wgpu = { version = "29.0", optional = true, default-features = false, features = ["vulkan", "gles", "std"] }
nvml-wrapper = { version = "0.12", optional = true }
procfs = { version = "0.18", optional = true }
pollster = { version = "0.4", optional = true }
dmidecode = { version = "1.0", optional = true }
nix = { version = "0.31", optional = true, default-features = false, features = ["net"] }
neli = { version = "0.7", optional = true }
num = { version = "0.4", optional = true }

# Daemon dependencies

[build-dependencies]
tonic-prost-build = { version = "0.14", optional = true }
inline-c = { version = "0.1.8", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.50", features = ["full"] }
