[package]
name = "monitord-client"
version = "0.1.0"
edition = "2021"
description = "Client library for interacting with monitord"
license = "MIT"

[dependencies]
monitord-protocols = { path = "../monitord-protocols" }
tokio = { version = "1.34", features = ["full"] }
tonic = "0.12.3"
futures = "0.3"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
chrono = "0.4"