[package]
name = "monitord-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# System monitoring
sysinfo = "0.33.1"

# GPU monitoring
nvml-wrapper = "0.10.0"
wgpu = "24.0.1"
amdgpu-sysfs = "0.17.5"

# Error handling
thiserror = "2.0.11"
anyhow = "1.0.96"

# Async runtime
tokio = { version = "1.43.0", features = ["full"] }

# Utilities
chrono = "0.4.40"
crossbeam = "0.8.4"
parking_lot = "0.12.3"
rayon = "1.10.0"
serde = { version = "1.0.218", features = ["derive"] }
prost-types = "0.13.5"

# Logging
tracing = "0.1.41"

# Data structures
monitord-protocols = { path = "../monitord-protocols" }

[lib]
name = "montitord_core"
path = "src/lib.rs"
