# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "monitord-metrics"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
prost = "0.14"
tonic = "0.14"
procfs = "0.18"
anyhow = "1.0"
tracing = "0.1"
dmidecode = "1.0"

[build-dependencies]
tonic-prost-build = "0.14"
