# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "monitord-metrics"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
# For the proto files
prost = "0.14"
tonic = "0.14"
# To parse the /proc directory
procfs = "0.18"
# Error handling
anyhow = "1.0"
# Logging
tracing = "0.1"
# NVIDIA GPU
nvml-wrapper = "0.12.0"
# AMD GPU
libamdgpu_top = "0.11.2"
# For getting OpenGL and Vulkan info
wgpu = { version = "28.0.0", default-features = false, features = ["vulkan", "gles", "std"] }
# To run async commands instantly
pollster = "0.4.0"
amdgpu_top_json = "0.11.2"

[dev-dependencies]
# For tests only
tracing-subscriber = "0.3.22"

[build-dependencies]
# For compiling the proto files needed
tonic-prost-build = "0.14"
