[package]
name = "monitord-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# monitord crates
monitord-protocols = { path = "../monitord-protocols" }
monitord-transport = { path = "../monitord-transport" }

# System information gathering
sysinfo = "0.33.1"
raw-cpuid = "11.4.0"
nvml-wrapper = "0.10.0"

# Async runtime
tokio = { version = "1.43.0", features = ["full"] }
async-trait = "0.1.87"
futures = "0.3.30"

# Command-line interface
config = "0.15.8"

# Error handling
thiserror = "2.0.11"

# Logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Utilities
prost = "0.13.5"
chrono = "0.4.40"
uuid = { version = "1.15.1", features = ["v4"] }

# Unix systems
[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"
nix = "0.29.0"

# Window systems
[target.'cfg(windows)'.dependencies]
windows-service = "0.8.0"
winapi = { version = "0.3.9", features = ["winsvc"] }


[[bin]]
name = "monitord"
path = "src/main.rs"
