[package]
name = "monitord-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# monitord crates
monitord-protocols = { path = "../monitord-protocols" }
monitord-transport = { path = "../monitord-transport" }
monitord-collectors = { path = "../monitord-collectors" }

# Async runtime
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"

# Command-line interface
config = "0.15.8"

# Error handling
thiserror = "2.0.11"

# Logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Utilities
chrono = "0.4.40"
uuid = { version = "1.15.1", features = ["v4"] }

# Unix systems
[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"
nix = "0.29.0"

# Window systems
[target.'cfg(windows)'.dependencies]
windows-service = "0.8.0"
winapi = { version = "0.3.9", features = ["winsvc"] }

[[bin]]
name = "monitord"
path = "src/main.rs"
