[package]
name = "monitord-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
# Data Types
monitord-protocols = { path = "../monitord-protocols" }

# Transport
nng = "1.0.1"
iceoryx2 = "0.5"
tonic = { version = "0.12.3" }

# Serialization
prost = "0.13.5"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.97"

# Logging
tracing = "0.1.41"

# Utilities
futures = { version = "0.3.31", features = [] }
futures-locks = "0.7.1"
chrono = "0.4.40"
uuid = { version = "1.16.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.44.1", features = ["full"] }
tracing-subscriber = "0.3.19"

[[example]]
name = "tokio_local"
