# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "monitord"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
sysinfo = "0.37.1"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tonic = "0.14.2"
num_cpus = "1.17.0"
libc = "0.2.178"
regex = "1.12.2"
thiserror = "2.0.17"
nvml-wrapper = "0.11.0"

[build-dependencies]
tonic-prost-build = "0.14.2"
