# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "monitord"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
sysinfo = "0.37.2"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tonic = "0.14.5"
num_cpus = "1.17.0"
libc = "0.2.182"
regex = "1.12.3"
thiserror = "2.0.18"
nvml-wrapper = "0.11.0"

[build-dependencies]
tonic-prost-build = "0.14.5"
